# rk3566_gba

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
docs/: cm3-io-dsi-analysis.md  development-log.md  gba-validation.md  hardware-selection.md  phase1-hdmi-validation.md  phase1-test-record-template.md  radxa_cm3_v1.3_pinout.xlsx  validation-helper.md  waveshare-4inch-dsi-lcd-analysis.md
docs/4inch DSI LCD/: 4inch DSI LCD - Waveshare Wiki.html  4inch-dsi-lcd_SKU21687.stp
docs/4inch DSI LCD/4inch DSI LCD - Waveshare Wiki_files/: bili-sc-sdk.umd.js.下载  bili-user-fingerprint.min.js.下载  index.js.下载  load(1).php  load(3).php  load.php  log-reporter.js.下载  nc-loader-2.14.0.min.js.下载  player.html
docs/radxa-cm3-io-board-v1360/: README.md  radxa_cm3_io_board_v1360.DSN  radxa_cm3_io_board_v1360.opj  radxa_cm3_io_board_v1360_bot_2d.dxf
docs/radxa-cm3-io-board-v1360/altium/radxa_cm3_io_board_v1360_pcb_layout/: radxa_cm3_io_board_v1360_pcb_layout.PrjPcb
docs/radxa-cm3-io-board-v1360/altium/radxa_cm3_io_board_v1360_schematic/: 01.cover.SchDoc  02.Index.SchDoc  03.Block_Diagram.SchDoc  04.HDMI0 OUT.SchDoc  05.Ethernet.SchDoc  07.PCIE2.0.SchDoc  (+15 more)
hardware/u90074_to_waveshare_15pin_dsi/: README.md  adapter-notes.md  pin-map.csv  u90074-to-waveshare-15pin-dsi.kicad_pcb  u90074-to-waveshare-15pin-dsi.kicad_pro
scripts/: audio-check.sh  gamepad-keyboard-bridge.py  gba-handheld.sh  gba-session.sh  launch-gba.sh  monitor-gba.sh
src/: gba_validation.cpp  gba_validation.h  main.cpp  platform_probe.cpp  platform_probe.h
tools/: monitor_gba_from_pc.py  radxa_dev_gui.py
